About to redo the app and tool to use the newly reconfigured library

--- a/SMJobBlessHelper/SMJobBlessHelper-Launchd.plist
+++ b/SMJobBlessHelper/SMJobBlessHelper-Launchd.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Label</key>
 	<string>com.apple.bsd.SMJobBlessHelper</string>
+	<key>EnableTransactions</key>
+	<true/>
 	<key>MachServices</key>
 	<dict>
 		<key>com.apple.bsd.SMJobBlessHelper</key>
