--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 CSAuthSample App.xcodeproj/project.xcworkspace/
 CSAuthSample.xcodeproj/project.xcworkspace/
 CSAuthSample.xcodeproj/xcuserdata/
+.DS_Store
