--- a/CSAuthSample Example App/CSAuthSample Example App.xcodeproj/xcshareddata/xcschemes/Example Helper Tool.xcscheme
+++ b/CSAuthSample Example App/CSAuthSample Example App.xcodeproj/xcshareddata/xcschemes/Example Helper Tool.xcscheme
@@ -10,13 +10,13 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "IDENTIFIERS_PATH=&quot;$SRCROOT/Common/Identifiers.swift&quot;&#10;&#10;APP_BUNDLE_ID=`echo &quot;print(Identifiers.appID)&quot; | /bin/cat &quot;$IDENTIFIERS_PATH&quot; - | swift -`&#10;&#10;TMP_ERR_LOG=&quot;/tmp/$APP_BUNDLE_ID-SetupLog.txt&quot;&#10;&#10;/bin/rm &quot;$TMP_ERR_LOG&quot;&#10;env &gt; /tmp/env.txt&#10;/bin/cat &quot;$IDENTIFIERS_PATH&quot; &quot;$SRCROOT/Common/Build Scripts/GlobalSetupScript.swift&quot; | swift - &gt; &quot;$TMP_ERR_LOG&quot; 2&gt;&amp;1&#10;&#10;">
+               scriptText = "/usr/bin/env swift &quot;${SRCROOT}/Common/Build Scripts/GlobalSetupScript.swift&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "2805EA32243A55F4008BD2DC"
-                     BuildableName = "Example App.app"
-                     BlueprintName = "Example App"
+                     BlueprintIdentifier = "2805EA4C243A563B008BD2DC"
+                     BuildableName = "&quot;$APP_ID.helper&quot;"
+                     BlueprintName = "Example Helper Tool"
                      ReferencedContainer = "container:CSAuthSample Example App.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
@@ -32,9 +32,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2805EA32243A55F4008BD2DC"
-               BuildableName = "Example App.app"
-               BlueprintName = "Example App"
+               BlueprintIdentifier = "2805EA4C243A563B008BD2DC"
+               BuildableName = "&quot;$APP_ID.helper&quot;"
+               BlueprintName = "Example Helper Tool"
                ReferencedContainer = "container:CSAuthSample Example App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -62,9 +62,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2805EA32243A55F4008BD2DC"
-            BuildableName = "Example App.app"
-            BlueprintName = "Example App"
+            BlueprintIdentifier = "2805EA4C243A563B008BD2DC"
+            BuildableName = "&quot;$APP_ID.helper&quot;"
+            BlueprintName = "Example Helper Tool"
             ReferencedContainer = "container:CSAuthSample Example App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -79,9 +79,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2805EA32243A55F4008BD2DC"
-            BuildableName = "Example App.app"
-            BlueprintName = "Example App"
+            BlueprintIdentifier = "2805EA4C243A563B008BD2DC"
+            BuildableName = "&quot;$APP_ID.helper&quot;"
+            BlueprintName = "Example Helper Tool"
             ReferencedContainer = "container:CSAuthSample Example App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
