--- a/CSAuthSample Example App/Common/Config/CSAuthSample-Example.xcconfig
+++ b/CSAuthSample Example App/Common/Config/CSAuthSample-Example.xcconfig
@@ -1,1 +1,6 @@
-CURRENT_PROJECT_VERSION = 1
+#include "VersionNumber.xcconfig"
+
+APP_ID = "com.charlessoft.CSAuthSample-Example"
+HELPER_ID = "$APP_ID.helper"
+XPC_SERVICE_ID = "$XPC_SERVICE_ID.xpc"
+CS_REQUIREMENT = ""
