fix some issues in the configuration

--- a/CSAuthSample Example App/Common/Config/CSAuthSample-Example.xcconfig
+++ b/CSAuthSample Example App/Common/Config/CSAuthSample-Example.xcconfig
@@ -1,6 +1,6 @@
 #include "VersionNumber.xcconfig"
 
-APP_ID = "com.charlessoft.CSAuthSample-Example"
-HELPER_ID = "$APP_ID.helper"
-XPC_SERVICE_ID = "$XPC_SERVICE_ID.xpc"
+APP_ID = com.charlessoft.CSAuthSample-Example
+HELPER_ID = ${APP_ID}.helper
+XPC_SERVICE_ID = ${APP_ID}.xpc
 CS_REQUIREMENT = ""
